--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="default_margin">16dp</dimen>
     <dimen name="default_half_margin">8dp</dimen>
     <dimen name="news_image_height">160dp</dimen>
+    <dimen name="icons_margin_effects">4dp</dimen>
 </resources>
